--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
-#server.port=8888
+server.port=8888
+#spring.profiles.active=dev
+#logging.level.com.example=trace
+logging.path=/spring/log
 
 #config person's value
-#person.last-name=zhangsan
-#person.age=18
-#person.birth=2017/12/1
-#person.boss=false
-#person.maps.k1=v1
-#person.maps.k2=14
-#person.lists=a,b,c
-#person.dog.name=dog
-#person.dog.age=15
+person.last-name=zhangsan${random.uuid}
+person.age=${random.int}
+person.birth=2017/12/1
+person.boss=false
+person.maps.k1=v1
+person.maps.k2=14
+person.lists=a,b,c
+#person.dog.name=${person.last-name}dog
+person.dog.name=${person.hello:hello}dog
+person.dog.age=15
