--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,16 @@ server.port=8888
 logging.path=/spring/log
 
 #config person's value
+
+#可以使用随机数占位符
 person.last-name=zhangsan${random.uuid}
+#用${person.last-name}获取前面的值
 person.age=${random.int}
 person.birth=2017/12/1
 person.boss=false
 person.maps.k1=v1
 person.maps.k2=14
 person.lists=a,b,c
-#person.dog.name=${person.last-name}dog
+#占位符：获取不到值就用冒号指定一个值
 person.dog.name=${person.hello:hello}dog
 person.dog.age=15
