--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8888
-#spring.profiles.active=dev
+
+#开启SpringBoot的debug，让控制台打印自动配置报告，这样就能知道哪些自动配置类生效
+debug=true
+
 #logging.level.com.example=trace
 logging.path=/spring/log
 
