--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,12 @@ server.port=8888
 #开启SpringBoot的debug，让控制台打印自动配置报告，这样就能知道哪些自动配置类生效
 debug=true
 
-#logging.level.com.example=trace
+#调整日志级别
+logging.level.com.example=trace
+#logging.file=G:/springboot.log
 logging.path=/spring/log
 
 #config person's value
-
 #可以使用随机数占位符
 person.last-name=zhangsan${random.uuid}
 #用${person.last-name}获取前面的值
