--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,10 @@
 		</dependency>
 		
 		<!-- springsecurity -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency> -->
 		
 	</dependencies>
 
