--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8888
 
 #开启SpringBoot的debug，让控制台打印自动配置报告，这样就能知道哪些自动配置类生效
-debug=true
+#debug=true
 
 #调整日志级别
 logging.level.com.example=trace
