--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8888
 #debug=true
 
 #调整日志级别
-logging.level.com.example=trace
+#logging.level.com.example=trace
 #logging.file=G:/springboot.log
 logging.path=/spring/log
 
