--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   profiles:
     active: dev
+  messages:
+    basename: i18n.login
+  thymeleaf:
+    cache: false #禁用缓存
 
 logging:
   level:
