--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,35 @@ spring:
     basename: i18n.login
   thymeleaf:
     cache: false #禁用缓存
-
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/ssmh
+    username: root
+    password: root
+    type: com.alibaba.druid.pool.DruidDataSource
+    # initialization-mode: always
+    
+    druid: 
+      #   数据源其他配置
+      initialSize: 5 #初始化大小
+      minIdle: 5  #最小
+      maxActive: 20  #最大
+      maxWait: 60000  #连接超时时间
+      timeBetweenEvictionRunsMillis: 60000  #配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      minEvictableIdleTimeMillis: 300000  # 指定一个空闲连接最少空闲多久后可被清除，单位是毫秒
+      validationQuery: SELECT 1 FROM DUAL
+      testWhileIdle: true   # 当连接空闲时，是否执行连接测试
+      testOnBorrow: false   # 当从连接池借用连接时，是否测试该连接
+      testOnReturn: false   # 在连接归还到连接池时是否测试该连接
+      poolPreparedStatements: true
+      #   配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙  
+      filters: stat,wall,slf4j
+      maxPoolPreparedStatementPerConnectionSize: 20
+      useGlobalDataSourceStat: true
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500;druid.stat.logSlowSql=true
+    
 logging:
-  level:
-    com: 
+  level: 
+    com:  
       example:
         debug
