--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ person.lists=a,b,c
 #占位符：获取不到值就用冒号指定一个值
 person.dog.name=${person.hello:hello}dog
 person.dog.age=15
+
+#自定义starter
+important.hello.prefix=important
+important.hello.suffix=soho
